--- a/src/Resources/Locales/en_US.axaml
+++ b/src/Resources/Locales/en_US.axaml
@@ -403,6 +403,31 @@
   <x:String x:Key="Text.Preference.AI.Server" xml:space="preserve">Server</x:String>
   <x:String x:Key="Text.Preference.AI.ApiKey" xml:space="preserve">API Key</x:String>
   <x:String x:Key="Text.Preference.AI.Model" xml:space="preserve">Model</x:String>
+  <x:String x:Key="Text.Preference.AI.SummaryPrompt" xml:space="preserve">Summary Prompt</x:String>
+  <x:String x:Key="Text.Preference.AI.SubjectPrompt" xml:space="preserve">Subject Prompt</x:String>
+  <x:String x:Key="Text.Preference.AI.SummaryPromptHint" xml:space="preserve">You are an expert developer specialist in creating commits.
+Provide a super concise one sentence overall changes summary of the user `git diff` output following strictly the next rules:
+- Do not use any code snippets, imports, file routes or bullets points.
+- Do not mention the route of file that has been change.
+- Simply describe the MAIN GOAL of the changes.
+- Output directly the summary in plain text.
+</x:String>
+  <x:String x:Key="Text.Preference.AI.SubjectPromptHint" xml:space="preserve">You are an expert developer specialist in creating commits messages.
+Your only goal is to retrieve a single commit message.
+Based on the provided user changes, combine them in ONE SINGLE commit message retrieving the global idea, following strictly the next rules:
+- Assign the commit {type} according to the next conditions:
+  feat: Only when adding a new feature.
+  fix: When fixing a bug.
+  docs: When updating documentation.
+  style: When changing elements styles or design and/or making changes to the code style (formatting, missing semicolons, etc.) without changing the code logic.
+  test: When adding or updating tests.
+  chore: When making changes to the build process or auxiliary tools and libraries.
+  revert: When undoing a previous commit.
+  refactor: When restructuring code without changing its external behavior, or is any of the other refactor types.
+- Do not add any issues numeration, explain your output nor introduce your answer.
+- Output directly only one commit message in plain text with the next format: {type}: {commit_message}.
+- Be as concise as possible, keep the message under 50 characters.
+</x:String>
   <x:String x:Key="Text.Preference.Appearance" xml:space="preserve">APPEARANCE</x:String>
   <x:String x:Key="Text.Preference.Appearance.DefaultFont" xml:space="preserve">Default Font</x:String>
   <x:String x:Key="Text.Preference.Appearance.DefaultFontSize" xml:space="preserve">Default Font Size</x:String>
@@ -621,7 +646,7 @@
   <x:String x:Key="Text.Welcome.OpenAllInNode" xml:space="preserve">Open All Repositories</x:String>
   <x:String x:Key="Text.Welcome.OpenOrInit" xml:space="preserve">Open Repository</x:String>
   <x:String x:Key="Text.Welcome.OpenTerminal" xml:space="preserve">Open Terminal</x:String>
-  <x:String x:Key="Text.Welcome.ScanDefaultCloneDir" xml:space="preserve">Rescan Repositories in Default Clone Dir</x:String>  
+  <x:String x:Key="Text.Welcome.ScanDefaultCloneDir" xml:space="preserve">Rescan Repositories in Default Clone Dir</x:String>
   <x:String x:Key="Text.Welcome.Search" xml:space="preserve">Search Repositories...</x:String>
   <x:String x:Key="Text.Welcome.Sort" xml:space="preserve">Sort</x:String>
   <x:String x:Key="Text.WorkingCopy" xml:space="preserve">Changes</x:String>
