--- a/src/Views/WorkingCopy.axaml
+++ b/src/Views/WorkingCopy.axaml
@@ -55,7 +55,7 @@
                   Classes="icon_button"
                   Width="26" Height="14"
                   Padding="0"
-                  ToolTip.Tip="{DynamicResource Text.WorkingCopy.Unstaged.StageAll}" 
+                  ToolTip.Tip="{DynamicResource Text.WorkingCopy.Unstaged.StageAll}"
                   Command="{Binding StageAll}">
             <Path Width="14" Height="14" Data="{StaticResource Icons.DoubleDown}"/>
           </Button>
@@ -99,7 +99,7 @@
           <Button Grid.Column="6" Classes="icon_button" Width="26" Height="14" Padding="0" ToolTip.Tip="{DynamicResource Text.WorkingCopy.Staged.UnstageAll}" Command="{Binding UnstageAll}">
             <Path Width="14" Height="14" Data="{StaticResource Icons.DoubleUp}"/>
           </Button>
-          <v:ChangeViewModeSwitcher Grid.Column="7" 
+          <v:ChangeViewModeSwitcher Grid.Column="7"
                                     Width="26" Height="14"
                                     Margin="0,1,0,0"
                                     ViewMode="{Binding Source={x:Static vm:Preference.Instance}, Path=StagedChangeViewMode, Mode=TwoWay}"/>
@@ -135,7 +135,7 @@
         <RowDefinition Height="128" MinHeight="100"/>
         <RowDefinition Height="36"/>
       </Grid.RowDefinitions>
-      
+
       <!-- Select Change Detail -->
       <Grid Grid.Row="0">
         <Border BorderThickness="1" BorderBrush="{DynamicResource Brush.Border2}">
@@ -165,7 +165,7 @@
                     <TextBlock Margin="0,16,0,8" FontSize="20" FontWeight="Bold" Text="{DynamicResource Text.WorkingCopy.Conflicts.Resolved}" Foreground="{DynamicResource Brush.FG2}" HorizontalAlignment="Center"/>
                     <TextBlock Text="{DynamicResource Text.WorkingCopy.CanStageTip}" Foreground="{DynamicResource Brush.FG2}" HorizontalAlignment="Center"/>
                   </StackPanel>
-                </Grid>                
+                </Grid>
               </Border>
             </DataTemplate>
 
@@ -185,7 +185,7 @@
       <v:CommitMessageTextBox Grid.Row="2" Text="{Binding CommitMessage, Mode=TwoWay}"/>
 
       <!-- Commit Options -->
-      <Grid Grid.Row="3" Margin="0,6,0,0" ColumnDefinitions="Auto,Auto,Auto,Auto,*,Auto,Auto,Auto,Auto">
+      <Grid Grid.Row="3" Margin="0,6,0,0" ColumnDefinitions="Auto,Auto,Auto,Auto,*,Auto,Auto,Auto,Auto,Auto">
         <Button Grid.Column="0"
                 Classes="icon_button"
                 Margin="4,0,0,0" Padding="0"
@@ -206,7 +206,19 @@
           <Path Width="15" Height="15" Data="{StaticResource Icons.AIAssist}"/>
         </Button>
 
-        <Button Grid.Column="2"
+      <Button Grid.Column="2"
+              Classes="icon_button"
+              Margin="0,2,0,0"
+              ToolTip.Tip="{DynamicResource Text.AIAssistant.SelectedLanguageTip}"
+              ToolTip.Placement="Top"
+              Click="OnOpenSelectLanguage"
+              ToolTip.VerticalOffset="0">
+          <Path Width="15" Height="15" Data="{StaticResource Icons.LanguageSelection}"/>
+      </Button>
+
+
+
+        <Button Grid.Column="3"
                 Classes="icon_button"
                 Margin="0,2,0,0"
                 Click="OnOpenConventionalCommitHelper"
@@ -216,7 +228,7 @@
           <Path Width="15" Height="15" Data="{StaticResource Icons.CommitMessageGenerator}"/>
         </Button>
 
-        <CheckBox Grid.Column="3"
+        <CheckBox Grid.Column="4"
                   Height="24"
                   Margin="8,0,0,0"
                   HorizontalAlignment="Left"
@@ -248,7 +260,7 @@
             </StackPanel>
           </ToolTip.Tip>
         </Button>
-        
+
         <!-- Invisible button just to add another hotkey `Ctrl+Shift+Enter` to commit with auto-stage -->
         <Button Grid.Column="7"
                 Width="0" Height="0"
