--- a/src/Views/StashChanges.axaml
+++ b/src/Views/StashChanges.axaml
@@ -11,7 +11,7 @@
     <TextBlock FontSize="18"
                Classes="bold"
                Text="{DynamicResource Text.Stash.Title}"/>
-    <Grid Margin="8,16,0,0" RowDefinitions="32,Auto,Auto" ColumnDefinitions="120,*">
+    <Grid Margin="8,16,0,0" RowDefinitions="32,Auto,Auto,32" ColumnDefinitions="120,*">
       <TextBlock Grid.Row="0" Grid.Column="0" 
                  HorizontalAlignment="Right" 
                  Margin="8,0" 
@@ -41,6 +41,11 @@
                 Content="{DynamicResource Text.Stash.OnlyStagedChanges}"
                 IsChecked="{Binding OnlyStaged, Mode=TwoWay}"
                 IsVisible="{Binding !HasSelectedFiles}"/>
+
+      <CheckBox Grid.Row="3" Grid.Column="1"
+                Height="32"
+                Content="{DynamicResource Text.Stash.KeepIndex}"
+                IsChecked="{Binding KeepIndex, Mode=TwoWay}"/>
     </Grid>
   </StackPanel>
 </UserControl>
